# DynamicContainerInventoryFramework

./: CMakeLists.txt
include/: containerManager.h
src/: hooks.cpp  main.cpp
src/export/: SKSEPlugin.cpp
